k8s/affine/04_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: affine-service
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
  type: ClusterIP
