k8s/affine/06_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: affine
  namespace: affine
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`affine.keindev.ru`)
      priority: 10
      services:
        - name: affine-service
          namespace: affine
          port: 3010
  tls:
    secretName: local-keindev-ru-tls
